tests/ui/associated-consts/issue-102335-const.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-const.rs:4:17
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                 ^^^^^^^^ associated type not allowed here
   |
   = note: `C` is not a generic type
help: try removing this type binding
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                ~~~~~~~~~~

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-const.rs:4:17
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                 ^^^^^^^^ associated type not allowed here
   |
   = note: `C` is not a generic type
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: try removing this type binding
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                ~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0229`.
